-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.202 2008-02-28 21:01:11 guru Exp $
-----------------------------------------------------------------------------------------
2008-02-28	pwessel
	* mgd77/mgd77info.c:		Same issue as minmax that was fixed on 1/31/2008.

2008-02-27	remko
	* gmt_io.[ch], gmt_calclock.[ch]:	Removed GMT_dt_from_usert, GMT_usert_from_dt, GMT_dtime.
				These were remnants of a time that internal time representation was entirely
				in rata die numbers. Since computations are done extensively with relative
				time (in doubles) keeping the conversion double-to-double became non-sensical.

2008-02-25	pwessel
	* gmt_io.c:	Now skips blank lines that has leading whitespace.  Function
				GMT_is_a_blank_line (char *line) is now used wherever ascii
				input is processed.
	* pscontour.c:	-T option was susceptible to infinite loop if bad record was found.

2008-02-25	remko
	* configure.ac, src/makefile, src/x2sys/makefile, src/mgd77/makefile, makegmt.macros.in:
				Shared libraries made easy: now set LIBEXT=a for static libraries and
				LIBEXT=$(SL) for shared libraries. Works also in supplements.
	* nc2xy.c:		Time coordinated recognised as such. Relative time output according
				to TIME_UNIT and TIME_EPOCH set in .gmtdefaults.

2008-02-24	remko
	* grd2xyz.txt, xyz2grd.txt:	Added information on using TIME COORDINATES.
	* gmt.h, gmt_globals.h:	Time system now fully defined in struct gmtdefs.time_system.
	* gmt_calclock.c:	---"---
	* gmt_init.c, gmt_init.h:	GMT_get_time_system and GMT_init_time_system_structure now use
				time_system as argument so that not only the internal time system
				defined in gmtdefs.time_system can be parsed.
				Need to move these functions to gmt_support.c?
				GMT_get_time_system can now also deal with "TIME_UNIT since TIME_EPOCH".
				'T' no longer required in epoch string.
				That means TIME_SYSTEM = "days since 2000-01-01 12:00" works.