@@ -1,0 +1,21 @@
+#include "common_options.txt"
+.TH ISOGMT 1 MANDATE GMT_STRING "Generic Mapping Tools"
+.SH NAME
+isogmt \- Run GMT command or script in isolation mode
+.SH SYNOPSIS
+\fBisogmt\fP \fIcommand\fP
+.SH DESCRIPTION
+\fBisogmt\fP runs a single \fBGMT\fP command or shell script in \fBisolation mode\fP.
+This means that the files \fI.gmtcommands4\fP and \fI.gmtdefaults4\fP will be read
+from the usual locations (current directory, \fI~/.gmt\fP, or home directory), but
+changes will only be written in a temporary directory, which will be removed after
+execution. The name of the temporary directory will be available to the command or
+script as the environment variable \fBGMT_TMPDIR\fP.
+.SH EXAMPLES
+Run the shell script \fIscript.gmt\fP in isolation mode
+.br
+.sp
+\fBisogmt\fP sh script.gmt
+.br
+.SH "SEE ALSO"
+.IR GMT (1)
